[build-system]
requires = ["maturin>=1.14.1,<2"]
build-backend = "maturin"

[project]
name = "causasv"
version = "0.8.6"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = ["slow: mark test as slow-running (excluded from default CI run)"]
addopts = "-m 'not slow'"

[tool.maturin]
features = ["python"]
manifest-path = "../Cargo.toml"
python-source = "."
