[build-system]
requires = ["maturin>=1.14.1,<2"]
build-backend = "maturin"

[project]
name = "causasv"
version = "0.8.6"
requires-python = ">=3.9"
dynamic = ["description", "readme", "license", "keywords"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
markers = ["slow: mark test as slow-running (excluded from default CI run)"]
addopts = "-m 'not slow'"

[tool.maturin]
features = ["python"]
manifest-path = "../Cargo.toml"
python-source = "."

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
